--- a/content/blog/en/lyyli-funding-announcement.mdx
+++ b/content/blog/en/lyyli-funding-announcement.mdx
@@ -10,46 +10,35 @@ image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
 imageAlt: "Expion and South Savo Growth Fund (handled by Redstone) join to Lyyli.ai's journey."
 ---
 
-# **Lyyli.ai secures venture capital funding to accelerate development – revolutionizing business communication with AI**
+# Lyyli.ai secures venture capital funding to accelerate development – revolutionizing business communication with AI
 
 Communication assistant **Lyyli.ai** has received significant venture capital funding to accelerate growth. **Expion** and **Redstone's** South Savo Growth Fund support the company that automates and streamlines businesses' internal and external communication with intelligent technology.
 
-
-## **AI-powered communication assistant transforms business communication**
+## AI-powered communication assistant transforms business communication
 
 **Lyyli.ai** is changing how companies create and manage content. The AI-powered communication assistant automates routine tasks, improves content quality, and ensures consistent communication across all channels. The AI agent learns the company's brand, values, and communication style, then produces consistent, high-quality content for all channels – from LinkedIn to internal newsletters.
 
-
 The company's CEO and co-founder is **Mikko Oksanen**, while the other co-founder **Veikko Laitinen** serves as the company's CTO.
 
-
-## **Investors' confidence in professional service organizations' communication challenges**
-
+## Investors' confidence in professional service organizations' communication challenges
 
 "Mikko understands well the communication challenges of professional service organizations, and Veikko's expertise and broad understanding of AI technologies convinced us," says **Sannamari Nykänen**, CEO of Expion Oy, who also joins the company's board with the investment. "We have been working with Mikko for several years, and it's wonderful that Expion's first venture capital investment goes precisely to **Lyyli.ai's** development work."
 
-
 With the funding, the company will finalize its product for market readiness and launch active sales in Finland for 50-1000 person professional service and project organizations, whose communication challenges are the greatest.
 
-
-## **AI frees communication professionals for creative work**
+## AI frees communication professionals for creative work
 
 "Investor support is crucial in a startup's early stage – it brings not only capital but also experience and networks, without which progress would be significantly slower. Now we can truly show how AI can free communication professionals for creative work," states Mikko, CEO of Lyyli AI Oy.
 
+"From a technical perspective, Lyyli.ai is a perfect project for me, I get to combine all the expertise areas I've gathered over the years while continuously learning new things," shares CTO **Veikko Laitinen**. "The possibilities of AI in communication are enormous, and our technical solution is built scalable from the ground up. When you see how **Lyyli** learns the company's communication style and starts producing genuinely high-quality content, you realize this is the technology that truly changes how work is done in teams. It's wonderful to receive investors' support and trust in the project. It gives us the opportunity to focus fully on product development and brings us to market faster."
 
-"From a technical perspective, Lyyli.ai is a perfect project for me, I get to combine all the expertise areas I've gathered over the years while continuously learning new things," shares CTO Veikko Laitinen. "The possibilities of AI in communication are enormous, and our technical solution is built scalable from the ground up. When you see how **Lyyli** learns the company's communication style and starts producing genuinely high-quality content, you realize this is the technology that truly changes how work is done in teams. It's wonderful to receive investors' support and trust in the project. It gives us the opportunity to focus fully on product development and brings us to market faster."
+## Diverse expertise joins the board
 
-
-## **Diverse expertise joins the board**
-
-With the investment, Sannamari Nykänen joins the company's board, an experienced CFO who has led several Due Diligence processes. The board now consists of Mikko Oksanen, Sannamari Nykänen, and Veikko Laitinen serving as chairman.
-
+With the investment, **Sannamari Nykänen** joins the company's board, an experienced CFO who has led several Due Diligence processes. The board now consists of **Mikko Oksanen**, **Sannamari Nykänen**, and **Veikko Laitinen** serving as chairman.
 
 "Sannis brings financial management expertise and external perspective to our board's operations. It's nice that someone occasionally questions our decisions a bit," notes Oksanen.
 
-
 Additionally, CPA **Teemu Laitinen** (Founder of Kuittiniilo Oy) joins as a board advisor.
-
 
 "We are grateful for our investors' support and look forward to future collaboration with them. Now it's time to show how Finnish AI expertise performs in the global communication market," concludes Oksanen.
 
@@ -64,7 +53,6 @@ Additionally, CPA **Teemu Laitinen** (Founder of Kuittiniilo Oy) joins as a boar
 **Expion** is a new Finnish family office company offering growth services and financing opportunities. The company focuses on supporting small and medium-sized companies on their path to growth and internationalization, providing companies with both financing and expert services that we have ourselves found necessary in the daily life of growth and business operations.
 
 [www.expion.fi](https://www.expion.fi)
-
 
 ### Redstone
 
